--- a/flux_balancer/skaffold.yaml
+++ b/flux_balancer/skaffold.yaml
@@ -17,3 +17,4 @@ deploy:
     manifests:
     - deployments/*.yaml
     - ../deployments/flux_balancer.yaml
+    - ../deployments/flux_balancer_hpa.yaml
