feat: add s3 archival for topics

--- a/flux_node/skaffold.yaml
+++ b/flux_node/skaffold.yaml
@@ -15,5 +15,6 @@ build:
 deploy:
   kubectl:
     manifests:
+    - ../deployments/flux_config.yaml
     - ../deployments/flux_node.yaml
     - ../deployments/flux_node_hpa.yaml
